# cryptic

./: README.md  pyproject.toml
cryptic/: __main__.py  args.py  chat.py  cmds.py  markdown.py  models.py  note.py
